# SentinelForge

./: .dockerignore  .gitignore  LICENSE  README.md
.github/workflows/: ci.yml
cmake/: theme.cmake
collector-cpp/: CMakeLists.txt  README.md
collector-cpp/include/: Application.h  Configuration.h  CorrelationAlert.h  CorrelationEngine.h  CorrelationRule.h  DetectionEngine.h  DetectionReport.h  DetectionResult.h  Event.h  EventMonitor.h  EventNormalizer.h  EventParser.h  JsonExporter.h  Logger.h  NormalizedEvent.h  OfficeLaunchesPowerShellRule.h  PerformanceProfiler.h  ReportPrinter.h  Rule.h  RuleLoader.h  RuleParser.h  RuleValidator.h  Scenario.h  SigmaLoader.h  SigmaParser.h  SigmaRule.h  SigmaTranslator.h
collector-cpp/regression/: CMakeLists.txt  main.cpp
collector-cpp/src/: Application.cpp  Configuration.cpp  CorrelationAlert.cpp  CorrelationEngine.cpp  DetectionEngine.cpp  DetectionReport.cpp  Event.cpp  EventMonitor.cpp  EventNormalizer.cpp  EventParser.cpp  JsonExporter.cpp  Logger.cpp  NormalizedEvent.cpp  OfficeLaunchesPowerShellRule.cpp  PerformanceProfiler.cpp  ReportPrinter.cpp  Rule.cpp  RuleLoader.cpp  RuleParser.cpp  RuleValidator.cpp  Scenario.cpp  SigmaLoader.cpp  SigmaParser.cpp  SigmaRule.cpp  SigmaTranslator.cpp  main.cpp
collector-cpp/tests/: CMakeLists.txt  ConfigurationTests.cpp  CorrelationEngineTests.cpp  DetectionEngineTests.cpp  EventMonitorTests.cpp  EventNormalizerTests.cpp  JsonExporterTests.cpp  LoggerTests.cpp  PerformanceProfilerTests.cpp  RuleValidatorTests.cpp  SigmaTests.cpp
config/: sentinelforge.json
detector-python/: README.md
docker/: collector.Dockerfile
docs/: BACKLOG.md  BRIEF.md  PROJECT_STATUS.md
docs/architecture/: gui-architecture.md  regression-testing.md
docs/design/: color-system.md  desktop-design-spec.md  typography.md
docs/roadmap/: issue-018.md  issue-019.md  issue-020.md  issue-021.md  issue-022.md  roadmap.md
gui/: CMakeLists.txt  README.md  build-out.txt
gui/include/: AppInfo.h.in  MainWindow.h  Theme.h.in
gui/include/mitre/: MitreCatalog.h
gui/include/models/: CorrelationModel.h  DetectionFilterProxy.h  DetectionModel.h
gui/include/nav/: NavigationController.h
gui/include/ops/: LiveOpsController.h  ThreatScorer.h
gui/include/pages/: DashboardPage.h  PlaceholderPage.h
gui/include/telemetry/: ITelemetrySource.h  MockTelemetrySource.h  TelemetryTypes.h
gui/include/util/: TimestampFormat.h
gui/include/widgets/: AboutDialog.h  CollapsibleSection.h  CorrelationDelegate.h  CorrelationTableView.h  CriticalToast.h  DetectionTableView.h  InspectorPane.h  LiveControlsBar.h  LogViewer.h  Panel.h  PerformancePanel.h  RuleDetailDialog.h  SeverityRailDelegate.h  SparklineWidget.h  StatusStrip.h
gui/resources/: sentinelforge.qrc  sentinelforge.qrc.in
gui/resources/branding/: app.rc
gui/resources/mitre/: techniques.json
gui/resources/styles/: dark.qss.in
gui/src/: MainWindow.cpp  main.cpp
gui/src/mitre/: MitreCatalog.cpp
gui/src/models/: CorrelationModel.cpp  DetectionFilterProxy.cpp  DetectionModel.cpp
gui/src/nav/: NavigationController.cpp
gui/src/ops/: LiveOpsController.cpp  ThreatScorer.cpp
gui/src/pages/: DashboardPage.cpp
gui/src/telemetry/: MockTelemetrySource.cpp
gui/src/widgets/: AboutDialog.cpp  CollapsibleSection.cpp  CorrelationDelegate.cpp  CorrelationTableView.cpp  CriticalToast.cpp  DetectionTableView.cpp  InspectorPane.cpp  LiveControlsBar.cpp  LogViewer.cpp  Panel.cpp  PerformancePanel.cpp  RuleDetailDialog.cpp  SeverityRailDelegate.cpp  SparklineWidget.cpp  StatusStrip.cpp
gui/tests/: CMakeLists.txt  CorrelationModelTests.cpp  DetectionModelTests.cpp  MitreCatalogTests.cpp  TimestampFormatTests.cpp
k8s/: README.md
rules/: mimikatz_execution.json  suspicious_cmd_whoami.json  suspicious_powershell.json
sample-attacks/: README.md  credential_dumping.yaml  encoded_powershell.yaml  lolbin_download.yaml  persistence_chain.yaml  service_persistence.yaml
sample-logs/: process_create.json
scripts/: build-gui.ps1  build.ps1  common.ps1  run-gui.ps1  run.ps1  test.ps1
sigma-rules/: certutil_lolbin_download.yml  sc_service_creation.yml  suspicious_encoded_powershell.yml
